--- a/adeluxuryeyewear/products/templates/products/collection_detail.html
+++ b/adeluxuryeyewear/products/templates/products/collection_detail.html
@@ -23,6 +23,10 @@
             <div class="active section uppercase">{% for item in ade_collection_item %}{{ item.name }}{% endfor %}</div>
         </div>
 
+        <!-- Go to www.addthis.com/dashboard to customize your tools -->
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5c024fa5ab749d10"></script>
+
+
         <div>
             {% for item in ade_collection_item %}
             <div>
@@ -50,18 +54,6 @@
                     <div class="ui clearing divider"></div>
                     <p></p>
                 </div>
-
-
-
-               <!-- <div class="ui center aligned container">
-                    <div class="ui small images thumbnail">
-                        <a href="#"><img class="ui image" src="https://cdn.shopify.com/s/files/1/0898/5824/products/Quay_Nordstrom_FrenchKiss_TortGold_Front_1024x1024.jpg?v=1541540420"></a>
-                        <a href="#"><img class="ui image" src="https://cdn.shopify.com/s/files/1/0898/5824/products/Quay_Nordstrom_FrenchKiss_TortGold_Side_1024x1024.jpg?v=1541540420"></a>
-                        <a href="#"><img class="ui image" src="https://cdn.shopify.com/s/files/1/0898/5824/products/QUAY_FRENCHKISS_BLACK_SMOKE_FRONT_1024x1024.jpg?v=1541540420"></a>
-                        <a href="#"><img class="ui image" src="https://cdn.shopify.com/s/files/1/0898/5824/products/QUAY_FRENCH_KISS_BLACK_SMOKE_SIDE_1024x1024.jpg?v=1541540420"></a>
-                        <a href="#"><img class="ui image" src="https://cdn.shopify.com/s/files/1/0898/5824/products/QUAY_FRENCHKISS_CLEAR_ROSE_FRONT_1024x1024.jpg?v=1541540420"></a>
-                    </div>
-                </div>  -->
 
 
                 
@@ -106,6 +98,7 @@
             </div>
            
                         
+          
             <button class="ui huge black standard right floated black button" style="margin-bottom: 50px">${{ item.price }} | ADD TO CART</button>    
                 
             {% endfor %}
