--- a/adeluxuryeyewear/ade/templates/ade/index.html
+++ b/adeluxuryeyewear/ade/templates/ade/index.html
@@ -12,14 +12,15 @@
     <div class="container black-bg" >
         <div class="main-carousel" data-flickity='{ "imagesLoaded": true, "percentPosition": false }'>
             <div class="carousel-cell">
-                <img src="{% static 'img/product_images/Luxxe _ ADE _Luxxe _ ADELuxxe _ 4B36D4FE-3E54-4B73-AB1A-3B865CBED26B.JPEG' %}" alt="product image"/>
+                <img src="{% static 'img/banner-pic.png' %}" alt="product image"/>
     
             </div>
 
             <div class="carousel-cell">
                 <img src="{% static 'img/product_images/Luxxe _ ADE _Luxxe _ ADELuxxe _ B85680AF-D830-4D2B-9C6E-AE848CD99B79.JPEG' %}" alt="banner img"/>
                 <div class="carousel-content">
-                    <a href="{% url 'products' %}"><button class="ui huge inverted standard button">SHOP NOW</button> </a>               
+                    <a href="{% url 'products' %}"><button class="ui huge inverted standard button mobile-hide">SHOP NOW</button> </a>
+                    <a href="{% url 'products' %}"><button class="ui medium inverted standard button mobile-show">SHOP NOW</button> </a>               
                 </div>
             </div>
 
@@ -28,7 +29,8 @@
                 
                 <div class=carousel-content>
                     <!--<h1 >SEE LIKE ROYALTY, FEEL LIKE ROYALTY</h1>-->
-                    <button class="ui huge inverted standard button">SHOP NOW</button>
+                    <a href="{% url 'products' %}"><button class="ui huge inverted standard button mobile-hide">SHOP NOW</button> </a>
+                    <a href="{% url 'products' %}"><button class="ui medium inverted standard button mobile-show">SHOP NOW</button> </a>  
                 </div>
             </div>
             
@@ -36,7 +38,7 @@
     </div>
     
     <div class="ui container">
-        <div class="ui huge header">FEEL LIKE ROYALTY IN ANY OF OUR COLLECTIONS</div>
+        <div class="ui huge header header-text">FEEL LIKE ROYALTY IN ANY OF OUR COLLECTIONS</div>
         <hr>
     </div>
     
@@ -46,8 +48,13 @@
                 <img class="ui medium centered  image" src="https://cdn.shopify.com/s/files/1/0898/5824/products/Quay_CanYouNot_BlackSmoke_Front_1024x1024.jpg?v=1536686022">
                 <div class="ui center aligned basic segment">
                     <a href="{% url 'collection__featured' %}">FEATURED COLLECTION</a><br><br>
-                    $70.00
+                    $70.00<br><br>
+
+                    <div class="ui button add-to-cart-btn">
+                        <i class="shop icon"></i> Add to Cart
+                    </div>
                 </div>
+                
             </div>
 
 
@@ -55,7 +62,11 @@
                 <img class="ui medium centered image" src="https://cdn.shopify.com/s/files/1/0898/5824/products/QUAY_MAN_MODERN_TIMES_BLACK_FRONT_1024x1024.jpg?v=1529339266">
                 <div class="ui center aligned basic segment">
                     <a href="{% url 'collection__men' %}">KINGS LINE</a><br><br>
-                    $75.00
+                    $75.00<br><br>
+
+                    <div class="ui button add-to-cart-btn">
+                        <i class="shop icon"></i> Add to Cart
+                    </div>
                 </div>
             </div>
 
@@ -63,7 +74,11 @@
                 <img class="ui medium centered image" src="https://cdn.shopify.com/s/files/1/0898/5824/products/QUAY_SAHARA_MINI_MATTE_BLACK_PURPLE_FADE_FRONT_1024x1024.jpg?v=1538412662">
                 <div class="ui center aligned basic segment">
                     <a href="{% url 'collection__women' %}">QUEENS LINE</a><br><br>
-                    $65.00
+                    $65.00<br><br>
+
+                    <div class="ui button add-to-cart-btn">
+                        <i class="shop icon"></i> Add to Cart
+                    </div>
                 </div>
             </div>
 
@@ -71,22 +86,25 @@
                 <img class="ui medium centered image" src="https://cdn.shopify.com/s/files/1/0898/5824/products/QUAY_MOD_STAR_GOLD_GREEN_FRONT_1024x1024.jpg?v=1539884570">
                 <div class="ui center aligned basic segment">
                     <a href="{% url 'collection__unisex' %}">UNISEX LINE</a><br><br>
-                    $70.00
+                    $70.00<br><br>
+
+                    <div class="ui button add-to-cart-btn">
+                        <i class="shop icon"></i> Add to Cart
+                    </div>
                 </div>
             </div>
         </div>
     </div><!-- End collections grid row -->
     
     
-    <div class="ui grid container black-bg" style="margin-bottom:50px">
+    <div class="ui grid stackable doubling black-bg" style="margin-bottom:50px">
         <div class="ten wide column">
             <!--<img class="ui huge image padded-img" src="https://semantic-ui.com/images/wireframe/image.png">-->
             <img class="ui huge image padded-img" src="{% static 'img/product_images/Luxxe _ ADE _Luxxe _ ADELuxxe _ D71A5A56-4ED3-43EF-A2E5-E1E72AF6437D.JPEG' %}">
         </div>
-        <div class="six wide column middle aligned">
+        <div class="six wide column middle aligned shop-banner">
             <h3 class="white" style="margin-right: auto; margin-left: auto;">SHOP OUR AMAZING STYLES TODAY</h3>
-            <a href="{% url 'products' %}"><button class="ui huge inverted standard button">SHOP NOW</button>   </a>
-                            
+            <a href="{% url 'products' %}"><button class="ui huge inverted standard button">SHOP NOW</button>   </a>         
         </div>
     </div>
 
